Strategy4 + Toast fix
Strategy 4 implementeret, SHAKE IT!
+ Har fixet at Toasts ikke forsvinder efter appen bliver slukket.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             android:name=".Strategy1"
             android:label="@string/title_activity_strategy1" >
         </activity>
+        <activity
+            android:name=".Strategy4"
+            android:label="@string/title_activity_strategy4"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
