--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,13 @@
         </activity>
         <activity
             android:name=".Strategy4"
-            android:label="@string/title_activity_strategy4"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_strategy4"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".KMLBuilderActivity"
+            android:label="@string/title_activity_kmlbuilder" >
         </activity>
     </application>
 
